# DronePi-Autonomous-Mapping

./: .gitignore  3D Scanning.code-workspace  QUICKSTART.md  README.md  docker-compose.yml  how b28f03de175e7040ef87f55eb680a61e92c2ccfc | grep -i "token|secret|key|password|ghp_|github_pat"  requirements-test.txt  save_pointcloud.sh  setup.sh
.github/workflows/: build.yml
RPI5/ros2_ws/src/: unitree_lidar_ros2
data/my_scan/: metadata.yaml
docker/: docker-compose.yml
docker/lidar/: Dockerfile
docker/mavros/: Dockerfile
docs/: DRONE_TEXTURE_PROJECT.md  architecture.md  ekf_slam_fusion.md  flight_procedure.md  hardware_setup.md  lidar_setup.md  mavros_setup.md  pi_deployment.md  pi_server_and_viewer_reference.md  pipeline_overview.md  post_processing.md
ground_station_app/: README.md  gen_test_flights.py  pyproject.toml  setup.ps1
ground_station_app/ground_station/: __init__.py  artifact_fetcher.py  bag_summary_parser.py  cli.py  dashboard.html  db.py  flight_samples_parser.py  flight_watcher.py  health_log_parser.py  ollama_client.py  orchestrator.py  process_manager.py  report_generator.py  report_publisher.py  ui_server.py  ulog_parser.py
ground_station_app/tests/: test_bag_summary_parser.py  test_cli_and_ui.py  test_health_log_parser.py  test_ollama_client.py  test_pipeline.py  test_process_manager.py  test_ulog_parser.py
logs/: log_1.txt  log_10.txt  log_11.txt  log_12.txt  log_13.txt  log_14.txt  log_15.txt  log_2.txt  log_3.txt  log_4.txt  log_5.txt  log_6.txt  log_7.txt  log_8.txt  log_9.txt
logs/sessions/scan_20260424_221106/: flight_record.json
logs/sessions/scan_20260424_224528/: flight_record.json
pythonconfig/: config_loader.py  dronepi.yaml
rpi_server/: camera-stream.service  camera_stream_server.py  meshview.html  meshview_telemetry_server.py  serve.py  setup_mesh_server_service.sh
scripts/mavros/: px4_sitl.sh  start_mavros.sh
scripts/pi/: build_workspace.sh  install_dependencies.sh  setup_services.sh
setup_scripts/: dronepi-help  setup_hotspot_service.sh
unitree_drone_mapper/: HANDOFF_UPDATE_2026-03-26.md  config.yaml  config_loader.py  dronepi-main.service  main.py
unitree_drone_mapper/config/: GPS+SLAM_HEXCOPTER.params  camera_calibration.yaml
unitree_drone_mapper/flight/: 99-unitree-lidar.rules  __init__.py  _slam_bridge.py  arducam_node.py  camera_capture.py  collision_monitor.py  drone-watchdog.service  drone_watchdog.py  dronepi-main.service  flight_controller.py  flight_mission.py  gap_detector.py  gps_reader.py  led.service  led_service.py  mission_executor.py  pointlio-standby.service  pointlio_health_check.py  preflight_checks.py  safe_flight_mixin.py  slam-bridge.service  watchdog backup.py  waypoint_validator.py
unitree_drone_mapper/hailo/: hailo_flight_node.py  hailo_ground_class.py  hailo_optical_flow.py
unitree_drone_mapper/launch/: dds_slam.launch.py
unitree_drone_mapper/tests/: Calibrate_imx219.py  Local_Mesh_Viewer.html  bench_test_ipc.py  collision_zone_test.py  gps_mavros_test_20260415_215640_fixes.csv  test.h264  test.mjpeg  test_Mavros_hover.py  test_altitude_validation.py  test_camera_hailo_chain.py  test_camera_preview.py  test_cloudcompare.py  test_ekf2_latency.py  test_frame_ingestor.py  test_gps_reader.py  test_gps_reader_mavros.py  test_hailo_flight_validation.py  test_hailo_flow.py  test_hover_camera.py  test_hover_smallscale.py  test_led_controller.py  test_manual_scan.py  test_mesh_from_bag.py  test_offboard_flight.py  test_offboard_gps.py  test_order.sh  test_processing.py  test_px4_dds.py  test_slam_bridge_flight.py  test_slam_live.py  test_square_camera.py  test_texture_live.py  test_texture_projection.py
unitree_drone_mapper/utils/: analyze_cloud.py  bag_tools.py  flight_logger.py  health_log_extractor.py  postflight_ipc.py  postprocess_mesh.py  postprocess_ortho.py  run_postflight.py
(+75 files in other folders)
