[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dronepi-ground"
version = "0.1.0"
description = "DronePi Ground Station — post-flight LLM report daemon and CLI"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",   # CLI framework — ground-station start/stop/replay/etc
    "rich>=13.0",    # Coloured terminal output in the CLI
    "httpx>=0.27",   # HTTP client — ArtifactFetcher + OllamaClient
    "pyulog>=1.0",   # PX4 ULog parser — reads .ulg flight controller logs
    "pandas>=2.0",   # CSV parsing — BagSummaryParser, HealthLogParser
]

[project.optional-dependencies]
# Install with: pip install -e ".[dev]"
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.0",
]

[project.scripts]
ground-station = "ground_station.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["ground_station*"]

# ── Environment variable reference ─────────────────────────────────────────────
#
# All parameters have sensible defaults for the standard field setup.
# Override by setting environment variables before launching the app.
#
# DRONEPI_RPI_HOST          RPi IP on the Wi-Fi hotspot   default: 10.42.0.1
# DRONEPI_RPI_PORT          serve.py HTTP port             default: 8080
# DRONEPI_RPI_UPLOAD_TOKEN  Bearer token for PUT /report   default: dronepi
# DRONEPI_OLLAMA_HOST       Ollama REST API base URL        default: http://localhost:11434
# DRONEPI_OLLAMA_MODEL      Model tag for every API call    default: qwen2.5:7b
# DRONEPI_OLLAMA_TIMEOUT_S  Ollama read timeout (seconds)  default: 90
# DRONEPI_POLL_INTERVAL_S   Daemon poll cycle (seconds)    default: 20
# DRONEPI_CACHE_DIR         Local artifact cache root       default: ~/.dronepi-ground/cache
# DRONEPI_DB_PATH           SQLite database path            default: ~/.dronepi-ground/dronepi.db
# DRONEPI_STATE_FILE        Processed-flight ID store       default: ~/.dronepi-ground/state.json
# DRONEPI_PID_FILE          Daemon PID file path            default: ~/.dronepi-ground/daemon.pid
# DRONEPI_LOG_FILE          Daemon log file path            default: ~/.dronepi-ground/daemon.log
# DRONEPI_UI_PORT           Dashboard HTTP port             default: 8765
